--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -78,3 +78,16 @@ h6
 
 html
 	font-size: 62.5%
+
+body
+	font-family: 'Poppins', sans-serif
+	font-weight: 400
+	color: $color-gray
+	font-size: 1.6rem
+	background-color: $background
+
+.container
+	max-width: 136.8rem
+	width: 100%
+	padding: 0 1.5rem
+	margin: 0 auto
