--- a/css/style.css
+++ b/css/style.css
@@ -1,113 +1,219 @@
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
+.h2__title {
+  font-weight: 600;
+  font-size: 3vw;
+  color: #000;
 }
 
-*,
-*:before,
-*:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-:focus,
-:active {
-  outline: none;
-}
-
-a:focus,
-a:active {
-  outline: none;
-}
-
-nav,
-footer,
-header,
-aside {
-  display: block;
-}
-
-html,
-body {
-  height: 100%;
-  width: 100%;
-  font-size: 100%;
-  line-height: 1;
-  font-size: 16px;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-input,
-button,
-textarea {
-  font-family: inherit;
-}
-
-input::-ms-clear {
-  display: none;
-}
-
-button {
-  cursor: pointer;
-}
-
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-a,
-a:visited {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-ul li {
-  list-style: none;
-}
-
-img {
-  vertical-align: top;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size: inherit;
-  font-weight: inherit;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-size: 1.6rem;
+.h3__title {
+  font-weight: 600;
+  font-size: 1.875vw;
+  color: #263238;
 }
 
 .container {
-  max-width: 136.8rem;
+  max-width: 85.5vw;
   width: 100%;
-  padding: 0 1.5rem;
+  padding: 0 0.9375vw;
   margin: 0 auto;
 }
 
+body {
+  background-color: #fff;
+  font-size: 1vw;
+  color: #8f95a5;
+  font-family: "Poppinns", sans-serif;
+  font-weight: 400;
+}
+
 .header {
-  padding: 5.5rem 0;
+  padding: 3.5625vw 0;
+}
+.header__top {
+  display: flex;
+  justify-content: space-between;
+}
+.header__logo {
+  max-width: 6.5625vw;
+  max-height: 3.375vw;
+  padding-top: 0.8125vw;
+  margin-right: 12.5vw;
+}
+.header__block {
+  display: flex;
+  justify-content: space-between;
+}
+.header__list {
+  display: flex;
+  justify-content: space-between;
+}
+.header__nav {
+  margin-right: 14.5vw;
+  padding-top: 0.875vw;
+}
+.header__item {
+  font-weight: 700;
+  font-size: 1.25vw;
+  line-height: 1.875vw;
+  color: #263238;
+}
+.header__item:not(:last-child) {
+  margin-right: 2.8125vw;
+}
+.header__btn {
+  border: 2px solid #263238;
+  border-radius: 5px;
+  color: #000;
+  font-size: 1.5vw;
+  line-height: 2.25vw;
+  padding: 1.0625vw 3.5625vw;
+}
+
+.hero {
+  padding-top: 2.8125vw;
+  display: flex;
+  justify-content: space-between;
+}
+.hero__descr {
+  padding-top: 3.125vw;
+  max-width: 31.6875vw;
+  display: flex;
+  flex-direction: column;
+}
+.hero__title {
+  position: relative;
+  font-weight: 600;
+  font-size: 4vw;
+  line-height: 5vw;
+  color: #000;
+  margin-bottom: 2.5vw;
+}
+.hero__title::after {
+  content: "";
+  position: absolute;
+  background: url("../images/icons/light-bulb.svg");
+  width: 6.25vw;
+  height: 6.25vw;
+  top: 5.625vw;
+  right: 0vw;
+}
+.hero__text {
+  display: block;
+  font-size: 1.5vw;
+  line-height: 2.25vw;
+  color: #8f95a5;
+  margin-bottom: 3.8125vw;
+}
+.hero__btn {
+  background: #263238;
+  border-radius: 0.9375vw;
+  font-size: 2.25vw;
+  color: #fff;
+  width: 27.375vw;
+  height: 7.375vw;
+  padding: 2vw 7.375vw;
+}
+.skills {
+  padding: 3.75vw 0;
+}
+.skills__title {
+  text-align: center;
+  margin-bottom: 7vw;
+}
+.skills__text {
+  font-size: 1vw;
+  line-height: 1.5vw;
+  color: #8f95a5;
+}
+.skills__grid {
+  display: grid;
+  grid-template-areas: "one two three" "one four four";
+  gap: 1.125vw;
+  justify-content: space-evenly;
+  align-items: stretch;
+}
+.skills__item {
+  background: #f5f5f5;
+  border-radius: 0.625vw;
+  padding-left: 2.6875vw;
+  padding-right: 2.6875vw;
+}
+.skills__btn {
+  background: #263238;
+  border-radius: 0.3125vw;
+  color: #fff;
+  padding: 0.9375vw 3.25vw;
+  font-weight: 500;
+  font-size: 1.25vw;
+  line-height: 1.875vw;
+}
+
+.speaking {
+  grid-area: one;
+  padding-top: 2.3125vw;
+  padding-bottom: 5.3125vw;
+}
+.speaking__text {
+  max-width: 18.75vw;
+  margin-bottom: 2.1875vw;
+}
+.speaking__text-top {
+  margin-bottom: 1.5vw;
+}
+.speaking__title {
+  margin-bottom: 1.875vw;
+}
+.speaking__img {
+  margin-bottom: 1.5625vw;
+}
+
+.writing {
+  grid-area: two;
+  padding-bottom: 2.75vw;
+}
+.writing__img {
+  padding-left: 6.875vw;
+  margin-bottom: -1.25vw;
+}
+.writing__title {
+  margin-bottom: 1vw;
+}
+.writing__text {
+  max-width: 18.75vw;
+  margin-bottom: 2vw;
+}
+
+.reading {
+  grid-area: three;
+}
+.reading__text {
+  margin-bottom: 2.1875vw;
+}
+.reading__img {
+  margin-bottom: 1.9375vw;
+}
+.reading__title {
+  margin-bottom: 0.625vw;
+}
+
+.listening {
+  grid-area: four;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 2.8125vw;
+  padding-bottom: 1.0625vw;
+}
+.listening__title {
+  margin-bottom: 1.25vw;
+}
+.listening__text {
+  max-width: 18.3125vw;
+  margin-bottom: 1.4375vw;
+}
+.listening__descr {
+  padding-top: 0.8125vw;
+}
+
+.listening .skills__image {
+  order: 1;
 }/*# sourceMappingURL=style.css.map */
